[package]
name = "banderwagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ff = { version = "^0.4.2", default-features = false }
ark-ec = { version = "^0.4.2", default-features = false }
ark-serialize = { version = "^0.4.2", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
rayon = "*"
rand_chacha = "0.3.1"
sha2 = "0.11.0-pre.4"
#timetrace-ffi = { git = "ssh://git@github.com/megaeth-labs/timetrace-ffi" }
[dev-dependencies]
hex = "0.4.3"

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-ff/asm", "ark-ec/parallel"]
[[example]]
name = "msm"
path = "example/msm.rs"