[package]
name = "banderwagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ed-on-bls12-381-bandersnatch = "0.5.0-alpha.0"
ark-ff = { version = "^0.5.0-alpha.0", default-features = false }
ark-ec = { version = "^0.5.0-alpha.0", default-features = false }
#ark-ec = { version = "^0.4.2", default-features = false }
ark-serialize = { version = "^0.5.0-alpha.0", default-features = false }
ark-std = { version = "^0.5.0-alpha.0", default-features = false }
rayon = "*"
rand_chacha = "0.3.1"
sha2 = "0.11.0-pre.4"
tokio = "1.40.0"
num_cpus = "1.16.0"
criterion = "0.5.1"
sysinfo = "0.31.4"
ark-ff-asm = "0.5.0-alpha.0"

#timetrace-ffi = { git = "ssh://git@github.com/megaeth-labs/timetrace-ffi" }
[dev-dependencies]
hex = "0.4.3"


[build-dependencies]
cc = "1.1.18"


[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-ff/asm", "ark-ec/parallel"]
[[example]]
name = "msm"
path = "example/msm.rs"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

